--- a/workspace/tutorial_exercises/01_accelergy_timeloop_2020_ispass/timeloop/03-model-conv1d+oc-3level/arch/3level.arch.yaml
+++ b/workspace/tutorial_exercises/01_accelergy_timeloop_2020_ispass/timeloop/03-model-conv1d+oc-3level/arch/3level.arch.yaml
@@ -10,7 +10,7 @@ architecture:
   - !Component
     name: MainMemory
     class: DRAM
-    attributes:
+    attributes:  # 相比前一版，没有设定depth属性，应该是相当于没有限制（容量无限制）
       width: 256
       datawidth: 8
 
