--- a/workspace/tutorial_exercises/01_accelergy_timeloop_2020_ispass/timeloop/04-model-conv1d+oc-3levelspatial/prob/conv1d+oc+ic.prob.yaml
+++ b/workspace/tutorial_exercises/01_accelergy_timeloop_2020_ispass/timeloop/04-model-conv1d+oc-3levelspatial/prob/conv1d+oc+ic.prob.yaml
@@ -6,7 +6,7 @@ problem:
     data_spaces:
     - name: Weights
       projection:
-      - [ [C] ]
+      - [ [C] ]  # 三维权重
       - [ [K] ]
       - [ [R] ]
     - name: Inputs
