--- a/workspace/tutorial_exercises/01_accelergy_timeloop_2020_ispass/timeloop/01-model-conv1d-2level/map/conv1d-2level-os.map.yaml
+++ b/workspace/tutorial_exercises/01_accelergy_timeloop_2020_ispass/timeloop/01-model-conv1d-2level/map/conv1d-2level-os.map.yaml
@@ -1,7 +1,7 @@
 mapping:
   - target: MainMemory
     type: temporal
-    factors: R=1 P=16
+    factors: R=1 P=1920 # R 维度不分块(因子为1)；P 维度分成 16 块（分16次从main memory读取数据到buffer）。
     permutation: PR
     
   - target: Buffer
