--- a/workspace/tutorial_exercises/01_accelergy_timeloop_2020_ispass/timeloop/02-model-conv1d+oc-2level/prob/conv1d+oc.prob.yaml
+++ b/workspace/tutorial_exercises/01_accelergy_timeloop_2020_ispass/timeloop/02-model-conv1d+oc-2level/prob/conv1d+oc.prob.yaml
@@ -6,14 +6,14 @@ problem:
     data_spaces:
     - name: Weights
       projection:
-      - [ [K] ]
+      - [ [K] ]  # 两维，分别对应K、R
       - [ [R] ]
     - name: Inputs
       projection:
-      - [ [R], [P] ]
+      - [ [R], [P] ]  # 一维，与R、P相关（实际上是R+P-1)
     - name: Outputs
       projection:
-      - [ [K] ]
+      - [ [K] ]  # 两维，分别对应K、R
       - [ [P] ]
       read_write: True
 
