--- a/workspace/tutorial_exercises/01_accelergy_timeloop_2020_ispass/timeloop/03-model-conv1d+oc-3level/map/conv1d+oc-3level-bypass.map.yaml
+++ b/workspace/tutorial_exercises/01_accelergy_timeloop_2020_ispass/timeloop/03-model-conv1d+oc-3level/map/conv1d+oc-3level-bypass.map.yaml
@@ -1,4 +1,18 @@
 mapping:
+  # - target: MainMemory
+  #   type: temporal
+  #   factors: R=1 P=1 K=1
+  #   permutation: PRK
+    
+  # - target: GlobalBuffer
+  #   type: temporal
+  #   factors: R=1 P=16 K=16
+  #   permutation: PRK
+    
+  # - target: RegisterFile
+  #   type: temporal
+  #   factors: R=3 P=1 K=2
+  #   permutation: RPK
   - target: MainMemory
     type: temporal
     factors: R=1 P=1 K=1
@@ -6,17 +20,19 @@ mapping:
     
   - target: GlobalBuffer
     type: temporal
-    factors: R=1 P=16 K=16
+    factors: R=1 P=16 K=4
     permutation: PRK
     
   - target: RegisterFile
     type: temporal
-    factors: R=3 P=1 K=2
+    factors: R=3 P=1 K=8
     permutation: RPK
     
     # Bypass
-
-  - target: GlobalBuffer
+    # 如何理解bypass?
+    # 1. Outputs不需要经过GlobalBuffer，直接从MainMemory读入RegisterFile
+    # 2. Weights和Inputs不需要经过RegisterFile，直接从GlobalBuffer读入MACC
+  - target: GlobalBuffer  
     type: dataspace
     keep:
     - Weights
