--- a/workspace/tutorial_exercises/01_accelergy_timeloop_2020_ispass/timeloop/06-mapper-convlayer-eyeriss/prob/VGG02_layer5.yaml
+++ b/workspace/tutorial_exercises/01_accelergy_timeloop_2020_ispass/timeloop/06-mapper-convlayer-eyeriss/prob/VGG02_layer5.yaml
@@ -1,19 +1,19 @@
 problem:
   version: 0.4
   instance:
-    C: 128
+    C: 128  # 输入通道数
     Hdilation: 1
     Hstride: 1
-    M: 256
-    N: 1
-    P: 56
-    Q: 56
-    R: 3
-    S: 3
+    M: 256  # 输出通道数
+    N: 1  # 批处理大小
+    P: 56  # 输出宽度
+    Q: 56  # 输出高度
+    R: 3 # 卷积核宽度
+    S: 3 # 卷积核高度
     Wdilation: 1
     Wstride: 1
   shape:
-    coefficients:
+    coefficients:   # 这里定义各类参数及其默认值？
     - default: 1
       name: Wstride
     - default: 1
@@ -33,11 +33,11 @@ problem:
       projection:
       - - - N
       - - - C
-      - - - R
-          - Wdilation
-        - - P
-          - Wstride
-      - - - S
+      - - - R  # FIXME: 这里的-数量不同，代表的含义是什么？
+          - Wdilation # 应该是描述参数之间的关系: 卷积核在宽度方向上的 dilation 因子
+        - - P  # R+P-1 组成Inputs的宽度维度
+          - Wstride  # 应该是描述参数之间的关系: 卷积核在宽度方向上的 stride 因子
+      - - - S  #  同理
           - Hdilation
         - - Q
           - Hstride
