--- a/workspace/tutorial_exercises/01_accelergy_timeloop_2020_ispass/timeloop/05-mapper-conv1d+oc-3level/arch/3level.arch.yaml
+++ b/workspace/tutorial_exercises/01_accelergy_timeloop_2020_ispass/timeloop/05-mapper-conv1d+oc-3level/arch/3level.arch.yaml
@@ -13,6 +13,8 @@ architecture:
     attributes:
       width: 256
       datawidth: 8
+  
+  # 这里定义和v2的不一致了，没有嵌套一个名为Chip的container
 
   - !Component
     name: GlobalBuffer
