--- a/workspace/tutorial_exercises/01_accelergy_timeloop_2020_ispass/timeloop/03-model-conv1d+oc-3level/arch/3level.arch.yaml
+++ b/workspace/tutorial_exercises/01_accelergy_timeloop_2020_ispass/timeloop/03-model-conv1d+oc-3level/arch/3level.arch.yaml
@@ -14,6 +14,8 @@ architecture:
       width: 256
       datawidth: 8
 
+  # NOTE: 相比v2，这里也少了一层嵌套container: Chip
+
   - !Component
     name: GlobalBuffer
     class: SRAM
